# Fortran_Davidson

./: .gitignore  .gitlab-ci.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: fortranCI.yml
CMakeModules/: FindMKL.cmake
benchmark/: plot.py
benchmark/sparsity_1e_3/: cycles_GJD.txt  times_DPR.txt  times_GJD.txt
benchmark/sparsity_1e_4/: cycles_GJD.txt  times_DPR.txt  times_GJD.txt
src/: CMakeLists.txt  array_utils.f90  benchmark.f90  benchmark_free.f90  davidson.f90  lapack_wrapper.f90  main.f90  sort.f90
src/tests/: CMakeLists.txt  test_call_lapack.f90  test_davidson.py  test_davidson_dense.py  test_dense_numpy.f90  test_dense_properties.f90  test_free_numpy.f90  test_free_properties.f90  test_lapack.py  test_numpy.f90  test_properties.f90  test_reorder.f90  test_utils.f90
tests/: matrix.txt
